--- a/assets/css/mai.css
+++ b/assets/css/mai.css
@@ -6,11 +6,11 @@
 }
 
 html{
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 62.5%;
     line-height: 1.6rem;
     box-sizing: border-box;
-    font-family: 'Vollkorn', sans-serif;
+    /* font-family: 'Vollkorn', sans-serif; */
 }
 
 .main{
@@ -77,22 +77,23 @@ html{
 
 .intro-user-right__name{
     color: rgb(46, 54, 63);
-    font-size: 3.5rem;
-    margin: 12px 43px 8px 0;
+    font-size: 3rem;
+    margin: 12px 0px 8px 0;
+    text-align: center;
 }
 
 .intro-user-right__job,
 .intro-user-right__KHOA{
     display: flex;
-    margin-top: 8px;
+    margin-top: 10px;
     color: rgb(75, 75, 82);
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     position: relative;
     left: 6px;
 }
 
 .intro-user-right__KHOA{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 
 .intro-user-right__social{
@@ -236,7 +237,7 @@ html{
     display: block;
     text-transform: uppercase;
     margin-bottom: 12px;
-    color:rgb(148, 146, 146);
+    color: rgb(149 149 149)
 }
 
 
@@ -321,6 +322,8 @@ html{
     text-decoration: none;
     font-weight: 700;
     color: #456;
+    font-size: 18px;
+    padding-bottom: 6px;
 }
 
 .extend{
@@ -480,8 +483,8 @@ a.list-project {
 
 .extend-item-para{
     text-align: left;
-    margin-bottom: 10px;
-    font-size: 2rem;
+    /* margin-bottom: 10px; */
+    font-size: 1.7rem;
     line-height: 1.8;
 }
 
@@ -507,7 +510,7 @@ a.list-project {
 }
 
 h3.title-project {
-    font-size: 2.4rem;
+    font-size: 2rem;
     margin: 50px 0 30px 0;
     text-align: left;
 }
@@ -685,7 +688,8 @@ h3.title-project {
     display:flex;
     align-items:center;
     margin-bottom: 24px;
-    font-size: 2.8rem;
+    font-size: 2.4rem;
+    line-height: 1.6;
 }
 
 .extend-item-text-title--h2 i{
@@ -720,6 +724,7 @@ img.list-certificate-item {
     color: rgb(47, 49, 59);
     font-size: 1.8rem;
     margin-bottom: 10px;
+    font-weight: 500;
 }
 
 .extend-item-text-title--h4::before{
@@ -1132,7 +1137,12 @@ i.bx.bxs-hand-right {
     color: #0f7ed4f5;
 }
 
-
+img.classHD {
+    width: 100%;
+    border-radius: 20px;
+    margin-top: 30px;
+    opacity: 0.8;
+}
 
 
 
