--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -42,6 +42,7 @@
     }
     .intro-user-right__job{
         display: block;
+        text-align: left;
     }
     .intro-contact{
         justify-content:space-between;
@@ -69,6 +70,12 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
     }
+    h3.case-item--h3 {
+        line-height: 1.6;
+    }
+    h4.extend-item-text-title--h4 {
+        font-size: 1.7rem;
+    }
     
 }
 
@@ -82,6 +89,7 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
     }
+   
 }
 
 /* Mobile */
@@ -195,6 +203,27 @@
     .ententain-avatar--avt{
         width: 129px;
         height: 81px;
+    }
+    .slide-text--title {
+        font-size: 1.7rem;
+    }
+    .slide-text--para {
+        font-size: 1.3rem;
+    }
+    .extend-item-para{
+        font-size: 1.4rem;
+    }
+    .extend-item--title-h1{
+        font-size: 2.4rem;
+    }
+    .extend-item--h3{
+        font-size: 2.4rem;
+    }
+    h3.title-project{
+        font-size: 1.8rem;
+    }
+    .col.l-6.m-6.big-project {
+        width: 100%;
     }
 }
 
