--- a/assets/css/mai.css
+++ b/assets/css/mai.css
@@ -661,7 +661,7 @@ h3.title-project {
 }
 
 .extend-item--body{
-    margin-bottom: 22px;
+    /* margin-bottom: 22px; */
     position: relative;
 }
 
